django-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app: django-app
    managed-by: uzapolsky
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django
          image: django_app:1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    env: prod
    owner: uzapolsky
spec:
  type: NodePort
  selector:
    app: django-app
  ports:
    - name: django
      protocol: TCP
      port: 8080
      targetPort: 80
