django-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
  - host: star-burger.test
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: django-service
              port:
                number: 80
